fixed alignement of info tab text

--- a/app/assets/stylesheets/tool/infotab.css.scss
+++ b/app/assets/stylesheets/tool/infotab.css.scss
@@ -69,7 +69,7 @@
 .info_tab--content--text {
   color:#d5d7cf;
   font-size:12px;
-  text-align:justify;
+  text-align:left;
   line-height:1.5;
 }
 
